# src/routers/index.ts
@@ -1,6 +1,7 @@
 import { Request, Response, Router } from "express";
 import useUser from "./user";
 import useRole from "./role";
+import useAuth from "./auth";
 import usePermission from "./permission";
 const router = Router();
 
@@ -10,5 +11,6 @@ router.get("/", (_req: Request, res: Response) => {
 router.use("/users", useUser);
 router.use("/roles", useRole);
 router.use("/permissions", usePermission);
+router.use("/auth", useAuth);
 
 export default router;
