# src/routers/user.ts
@@ -1,12 +1,14 @@
 import { Router } from "express";
 import UserController from "../controllers/user";
 import { body, param } from "express-validator";
-import { validate } from "../middlewares";
+import { authAccessToken, hasPermission, validate } from "../middlewares";
 
 const router = Router();
 
 router.post(
 	"/",
+	authAccessToken,
+	hasPermission("admin", "create"),
 	validate([
 		body("username").isLength({ min: 5 }),
 		body("email").isEmail(),
@@ -19,20 +21,26 @@ router.post(
 		const controller = new UserController();
 
 		const response = await controller.createUser(req.body);
-		return res.send(response);
+		return res.status(response.code).send(response);
 	}
 );
 
-router.get("/", async (_req, res) => {
+router.get("/", authAccessToken, hasPermission("admin", "list"), async (_req, res) => {
 	const controller = new UserController();
 	const response = await controller.getUsers();
-	return res.send(response);
+	return res.status(response.code).send(response);
 });
 
-router.get("/:id", validate([param("id").notEmpty().trim()]), async (req, res) => {
-	const controller = new UserController();
-	const id = req.params.id;
-	const response = await controller.getUser(id);
-	return res.send(response);
-});
+router.get(
+	"/:id",
+	authAccessToken,
+	hasPermission("admin", "detail"),
+	validate([param("id").notEmpty().trim()]),
+	async (req, res) => {
+		const controller = new UserController();
+		const id = req.params.id;
+		const response = await controller.getUser(id);
+		return res.status(response.code).send(response);
+	}
+);
 export default router;
