# src/types/response.ts
@@ -1,0 +1,11 @@
+export interface IResponse<T> {
+	code: number;
+	success: boolean;
+	message?: string;
+	errors?: Array<string>;
+	data?: T;
+}
+export interface Token {
+	refreshToken: string | null;
+	accessToken: string | null;
+}
